# mkdocs-example

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: getting-started.md  index.md
docs/stylesheets/: extra.css
