[project]
name = "mydocs"
version = "0.1.0"
description = "Documentation site built with MkDocs and Material theme"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.5",
]

